navbar fix and scroll history done

--- a/root.css
+++ b/root.css
@@ -7,8 +7,10 @@
   position: fixed ;
   left    : 0%    ;
   right   : 0%    ;
+  top     : 0%    ;
 }
 
 .ssr>.left{
-  z-index: 1;
+  position  : relative  ;
+  z-index   : 1         ;
 }
